<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00A9E7"
    >
    <!-- MapView layout and initial extent -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_break1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/break1"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/edittext1"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_break2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/break2"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/edittext2"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_break3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/break3"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/edittext3"
            android:textSize="12dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button_text" />

    </LinearLayout>

    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
  		initExtent = "11158011, -116802, 11192869, -83012">
    </com.esri.android.map.MapView>
  	
</LinearLayout>
